# hep-ga

./: .gitignore  Makefile.am  README  README.rst  configure.ac
doc/: Doxyfile.in  Makefile.am  references.bib
examples/: Makefile.am  eval.cpp  mainpage.cpp  spinors.cpp  wrapper.cpp
include/: Makefile.am
include/hep/: addition.hpp  algebra.hpp  binary_expression.hpp  blade.hpp  common_product.hpp  common_sum.hpp  difference.hpp  eval.hpp  expression.hpp  expression_ref.hpp  ga.hpp  ga_types.hpp  grade.hpp  inline.hpp  inner_product.hpp  multi_vector.hpp  negation.hpp  operations.hpp  outer_product.hpp  product.hpp  reversion.hpp  selection.hpp  sign_table.hpp  stream.hpp  sum.hpp  unary_expression.hpp  wrapper.hpp
include/hep/expr/: assignment.hpp  cond_difference.hpp  cond_sum.hpp  enable_expr.hpp  predicates.hpp  prod_elem.hpp  prod_elem_cond_sum.hpp  prod_elem_sum.hpp  prod_elem_sum_list.hpp
include/hep/expression/: assignment.hpp
include/hep/ga/: algebra.hpp  binary_expression.hpp  blade.hpp  common_product.hpp  common_sum.hpp  difference.hpp  eval.hpp  expression.hpp  expression_ref.hpp  grade.hpp  inline.hpp  inner_product.hpp  multi_vector.hpp  negation.hpp  ostream.hpp  outer_product.hpp  product.hpp  reversion.hpp  selection.hpp  stream.hpp  sum.hpp  unary_expression.hpp  wrapper.hpp
include/hep/ga/impl/: common_product.hpp  common_sum.hpp  multi_vector.hpp  stream.hpp
include/hep/ga/list/: find.hpp  intersection.hpp  list.hpp  merge.hpp
include/hep/ga/utils/: next_bit_permutation.hpp  pop_count.hpp  sign_table.hpp
include/hep/impl/: addition.hpp  algebra.hpp  blade.hpp  common_product.hpp  common_sum.hpp  difference.hpp  eval.hpp  grade.hpp  inner_product.hpp  multi_vector.hpp  negation.hpp  operations.hpp  product.hpp  reversion.hpp  selection.hpp  stream.hpp  sum.hpp
include/hep/implementation/: multi_vector.hpp  operations.hpp  sign_table.hpp
include/hep/list/: find.hpp  grade_to_list.hpp  grades_to_list.hpp  intersection.hpp  list.hpp  merge.hpp  multiply.hpp
include/hep/utils/: binomial_coefficient.hpp  find.hpp  grade_list_product.hpp  grade_to_list.hpp  grades_to_list.hpp  index_representation.hpp  intersection.hpp  list.hpp  merge.hpp  multiply.hpp  next_bit_permutation.hpp  nth_bit_permutation_inverse.hpp  num_of_components.hpp  pop_count.hpp  sign_table.hpp  trailing_zeroes.hpp
m4/: std_cxx.m4
test/: Makefile.am  test_ga.cpp  test_pop_count.cpp
tests/: Makefile.am  test_addition_in_g2.cpp  test_binomial_coefficient.cpp  test_difference_in_g2.cpp  test_geometric_product_for_g2.cpp  test_geometric_product_for_g3.cpp  test_geometric_product_for_g4.cpp  test_geometric_product_in_g2.cpp  test_geometric_product_in_g3.cpp  test_geometric_product_in_g4.cpp  test_grade.cpp  test_grade_in_g2.cpp  test_grade_list_product.cpp  test_grade_projection.cpp  test_index_representation.cpp  test_inner_product_in_g2.cpp  test_multi_vector.cpp  test_multi_vector_in_g2.cpp  test_multi_vector_in_g3.cpp  test_multi_vector_in_g4.cpp  test_negation_in_g2.cpp  test_next_bit_permutation.cpp  test_nth_bit_permutation_inverse.cpp  test_num_of_components.cpp  test_outer_product_in_g2.cpp  test_pop_count.cpp  test_product_in_g2.cpp  test_product_in_g3.cpp  test_product_in_g4.cpp  test_product_with_scalar_in_g2.cpp  test_reversion_in_g3.cpp  test_selection_in_g2.cpp  test_sign_table.cpp  test_sum_in_g2.cpp  test_sum_with_scalar_in_g2.cpp  test_trailing_zeroes.cpp
